--- a/ios/Podfile
+++ b/ios/Podfile
@@ -69,3 +69,6 @@ setup_permissions([
   end
 end
 
+target 'OneSignalNotificationServiceExtension' do
+  pod 'OneSignalXCFramework', '>= 5.0.0', '< 6.0'
+end
